[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = {version ="1.0.109", features = ["extra-traits", "parsing"]}
# TODO
